// Original file: proto/list.proto

import type { TodoRequest as _listPackage_TodoRequest, TodoRequest__Output as _listPackage_TodoRequest__Output } from '../listPackage/TodoRequest';

export interface TodoResponse {
  'todos'?: (_listPackage_TodoRequest)[];
}

export interface TodoResponse__Output {
  'todos'?: (_listPackage_TodoRequest__Output)[];
}
